--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,17 @@
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.7.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-core</artifactId>
+            <version>1.33</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-generator-annprocess</artifactId>
+            <version>1.33</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
